--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    ">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="Lion Picture">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="text" title="Lion Picture">
   </body>
 </html>
